@startuml TP2

title Diagrama De Clases De Preguntas con comportamiento Clasico Cajú

hide circle
skinparam classAttributeIconSize 0
skinparam roundcorner 25
skinparam sequenceArrowThickness 2
skinparam classFontSize 20

skinparam class {
BackgroundColor FloralWhite
ArrowColor DimGray
BorderColor DimGray
}

abstract class Pregunta{
        # tipoPregunta: String
        # opcionesCorrectas: Collection<String>
        # todasLasOpciones: Collection<String>
        # textoPregunta: String
        + compararRespuestas(Collection<String>): Int
        + activarMultiplicador()
        + activarExclusividad()
}

class PreguntaMCClasica{
        + PreguntaMCClasica(String, String, String[], Collection<String>)
        + compararRespuestas(Collection<String>): Int
}

class PreguntaGC{
        - grupos: Map<String, String>
        + PreguntaGC(String, String, String[], Collection<String>, Map<String, String>)
        + compararRespuestas(Collection<String>): Int
}

class PreguntaOC{
        + PreguntaOC(String, String, String[], Collection<String>)
        + compararRespuestas(Collection<String>): Int
}

class PreguntaVoFClasica{
        + PreguntaVoFClasica(String, String, String[])
        + compararRespuestas(Collection<String>): Int
}

interface Comportamiento{
        + compararRespuestas(Collection<String>, Collection<String>): Int
}

class ComportamientoClasico{
        + compararRespuestas(Collection<String>, Collection<String>): Int
}

PreguntaMCClasica -up-|> Pregunta
PreguntaVoFClasica -up-|> Pregunta
PreguntaOC -up-|> Pregunta
PreguntaGC -up-|> Pregunta

ComportamientoClasico ..|> Comportamiento

PreguntaMCClasica --> ComportamientoClasico
PreguntaVoFClasica --> ComportamientoClasico
PreguntaOC --> ComportamientoClasico
PreguntaGC --> ComportamientoClasico

@enduml